--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ authors = [
     {name = "Gabriel Dornas",email = "gabrielbdornas@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
+    "pypdf2 (>=3.0.1,<4.0.0)",
+    "ipdb (>=0.13.13,<0.14.0)",
+    "taskipy (>=1.14.1,<2.0.0)",
+    "reportlab (>=4.3.0,<5.0.0)"
 ]
 
 
